saturn-program-macros/tests/compile_fail/duplicate_variant.stderr
error: duplicate instruction variant after case conversion; rename the handler or use distinct names
  --> tests/compile_fail/duplicate_variant.rs:31:12
   |
31 |     pub fn fooHandler<'info>(
   |            ^^^^^^^^^^

warning: unused import: `saturn_account_parser::Context`
 --> tests/compile_fail/duplicate_variant.rs:5:5
  |
5 | use saturn_account_parser::Context;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
